fix braedcrumb spacing

--- a/Resources/Public/CSS/stylesheet.less
+++ b/Resources/Public/CSS/stylesheet.less
@@ -427,7 +427,7 @@ body > header.header {
 		}
 	}
     .divider {
-        margin:0;
+        margin:0 5px;
     }
 	a {
 		color:@blue;
